--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -18,3 +18,11 @@
 	background: #fff;
 	color:black;
 }
+.btn-modal {
+	background-color: #4CAEBA;
+	color: #fff;
+	border: none;
+	border-radius: 4px;
+	padding: 0.5rem 1rem;
+	cursor: pointer
+}	
